Added /me endpoint for getting logged user info
